# python-package-template

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
greet_anyone/: __init__.py  cli.py  core.py
tests/: test.py
