[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greet_anyone"
description = "A libary and cli to greet anyone."
version = "0.0.0" # set by uv during release
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "rotgruengelb", email = "daniel+python-package-template@rotgruengelb.net" }]
keywords = ["cli", "tool"]
dependencies = []

classifiers = ["Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console"]

[project.scripts]
cutstitch = "greet_anyone.cli:main"

[project.urls]
Homepage = "https://github.com/rotgruengelb/python-package-template"
Documentation = "https://github.com/rotgruengelb/python-package-template#readme"
Source = "https://github.com/rotgruengelb/python-package-template"
Tracker = "https://github.com/rotgruengelb/python-package-template/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "tests.*"]

